Score visibility fixed

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 body {
     text-align: center;
     background-color:rosybrown;
-    height: 100vh;
+    width: 100%;
     position:fixed;
     top:0;
     bottom:0;
@@ -76,6 +76,11 @@ h2 {
     /* display: none; */
 }
 
+.game {
+    
+}
+
+
 .simon {
     display: flex;
     justify-content: center;
@@ -123,7 +128,7 @@ h2 {
 .score {
     display: flex;
     justify-content: space-evenly;
-    margin: 50px;
+    margin: 0 auto;
     font-family: 'Zen Dots', cursive;
 }
 
